testsuite/tests/typing-gadts/pr7214.ml.reference

# type _ t = I : int t
#             Characters 61-62:
      let (I : a t) = x     (* fail because of toplevel let *)
           ^
Error: This pattern matches values of type int t
       but a pattern was expected which matches values of type a t
       Type int is not compatible with type a 
#       type (_, _) eq = Refl : ('a, 'a) eq
#                     Characters 116-120:
       let (Refl : (int, a) eq) = M.e  (* must fail for soundness *)
            ^^^^
Error: This pattern matches values of type (int, int) eq
       but a pattern was expected which matches values of type (int, a) eq
       Type int is not compatible with type a 
# 
